--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         <header>
             <div class="profile-container">
                 <!-- Replace with your actual profile photo -->
-                <img src="profile.jpg" alt="Devansh Pathak" class="profile-photo">
+                <img src="https://drive.google.com/file/d/1WlPtc0-Ndh7ZTggjQXvWiJxk1mBWg0YL/view?usp=sharing" alt="Devansh Pathak" class="profile-photo">
             </div>
             <h1>Devansh Pathak</h1>
             <div class="title">Embedded Systems & IoT Engineer</div>
